tests/NormalTests/paczka1/fuzzy1/14066277.err
Error in line 2: iuykKZMiIcd S243 14,3
Error in line 5: EtQeR S747 91,69
Error in line 13: EtQeR S472 4,9
Error in line 22: EtQeR A7 72,2
Error in line 25: EtQeR S243 9,8
Error in line 24: 5J6q S472 18,4
Error in line 40: EtQeR A7 260,77
